tests/fixtures/invalid/locale/broken-impl-brace.lgl
impl Fruit {
  apple {
    label = Apple
  pear {
    label = Pear
  }
}
